style: format button component SCSS for improved readability

--- a/projects/atomic-design/src/lib/atoms/button/button.component.scss
+++ b/projects/atomic-design/src/lib/atoms/button/button.component.scss
@@ -1,3 +1,13 @@
-button.primary { background-color: green; color: white; }
-button.danger { background-color: red; color: white; }
-button.outline { background-color: transparent; border: 1px solid gray; color: gray; }
+button.primary {
+  background-color: green;
+  color: white;
+}
+button.danger {
+  background-color: red;
+  color: white;
+}
+button.outline {
+  background-color: transparent;
+  border: 1px solid gray;
+  color: gray;
+}
