--- a/projects/atomic-design/src/lib/atoms/button/button.component.scss
+++ b/projects/atomic-design/src/lib/atoms/button/button.component.scss
@@ -1,5 +1,6 @@
 @use "../../styles/mixins.scss" as m;
 @use "../../styles/variables.scss" as v;
+@use "sass:color";
 
 .button-primary {
   appearance: none;
