style: fix class name for primary button to follow BEM convention

--- a/projects/atomic-design/src/lib/atoms/button/button.component.scss
+++ b/projects/atomic-design/src/lib/atoms/button/button.component.scss
@@ -2,7 +2,7 @@
 @use "../../styles/variables.scss" as v;
 @use "sass:color";
 
-.button-primary {
+.button.primary {
   appearance: none;
   background: linear-gradient(135deg, v.$primary, v.$accent);
   border: none;
